2020-09-10  Kate Cheney  <katherine_cheney@apple.com>

        Clean up App-Bound Domains code to only compile for iOS with its own macro
        https://bugs.webkit.org/show_bug.cgi?id=215027
        <rdar://problem/63688232>

        Reviewed by Darin Adler.

        Define a new APP_BOUND_DOMAINS preprocessor macro to more aptly gate
        App Bound Domains behavior.

        * wtf/PlatformEnable.h:
        * wtf/PlatformEnableCocoa.h:

2020-09-10  Said Abou-Hallawa  <sabouhallawa@apple.com>

        [CG] REGRESSION (Big Sur): A GIF image with a finite loopCount loops an extra cycle
        https://bugs.webkit.org/show_bug.cgi?id=216018
        <rdar://problem/68304035>

        Reviewed by Tim Horton.

        Add a new macro for the new accurate behavior of CGImageSource.

        Unrelated change: Fix the conditions for enabling the WebP images.

        * wtf/PlatformHave.h:

2020-09-09  Ryosuke Niwa  <rniwa@webkit.org>

        Simplify OptionSet::set
        https://bugs.webkit.org/show_bug.cgi?id=216335

        Reviewed by Said Abou-Hallawa.

        Simplified the implementation of OptionSet::set since we've verified that both clang and gcc
        generate comparable code in x86_64 and clang does the same for arm64.

        * wtf/OptionSet.h:
        (WTF::OptionSet::set):

2020-09-09  Wenson Hsieh  <wenson_hsieh@apple.com>

        Text copied and pasted from Mac Catalyst apps appears larger than expected
        https://bugs.webkit.org/show_bug.cgi?id=215971
        <rdar://problem/65768907>

        Reviewed by Tim Horton.

        Add a new flag to guard the presence of `_UIApplicationCatalystUserInterfaceIdiom`,
        `_UIApplicationCatalystScaleFactor`, and `_UIApplicationCatalystRequestViewServiceIdiomAndScaleFactor`.

        * wtf/PlatformHave.h:

2020-09-08  Ryosuke Niwa  <rniwa@webkit.org>

        Node flags should be an OptionSet
        https://bugs.webkit.org/show_bug.cgi?id=216305

        Reviewed by Antti Koivisto.
