@@ -41,6 +41,10 @@
 #define DYLD_IOS_VERSION_12_0 0x000C0000
 #endif
 
+#ifndef DYLD_IOS_VERSION_12_2
+#define DYLD_IOS_VERSION_12_2 0x000C0200
+#endif
+
 #ifndef DYLD_IOS_VERSION_13_0
 #define DYLD_IOS_VERSION_13_0 0x000D0000
 #endif
@@ -54,7 +58,7 @@
 #endif
 
 #ifndef DYLD_IOS_VERSION_14_0
-#define DYLD_IOS_VERSION_14_0 0x000e0000
+#define DYLD_IOS_VERSION_14_0 0x000E0000
 #endif
 
 #ifndef DYLD_MACOSX_VERSION_10_13
@@ -78,7 +82,7 @@
 #endif
 
 #ifndef DYLD_MACOSX_VERSION_10_16
-#define DYLD_MACOSX_VERSION_10_16 0x000a1000
+#define DYLD_MACOSX_VERSION_10_16 0x000A1000
 #endif
 
 #else
@@ -97,7 +101,7 @@
 #define DYLD_IOS_VERSION_13_0 0x000D0000
 #define DYLD_IOS_VERSION_13_2 0x000D0200
 #define DYLD_IOS_VERSION_13_4 0x000D0400
-#define DYLD_IOS_VERSION_14_0 0x000e0000
+#define DYLD_IOS_VERSION_14_0 0x000E0000
 
 #define DYLD_MACOSX_VERSION_10_11 0x000A0B00
 #define DYLD_MACOSX_VERSION_10_12 0x000A0C00
@@ -106,7 +110,7 @@
 #define DYLD_MACOSX_VERSION_10_15 0x000A0F00
 #define DYLD_MACOSX_VERSION_10_15_1 0x000A0F01
 #define DYLD_MACOSX_VERSION_10_15_4 0x000A0F04
-#define DYLD_MACOSX_VERSION_10_16 0x000a1000
+#define DYLD_MACOSX_VERSION_10_16 0x000A1000
 
 #endif
 
